--- a/index.html
+++ b/index.html
@@ -102,7 +102,88 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </noscript>
     <!-- Load webcomponents-loader.js to check and load any polyfills your browser needs -->
     <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="https://cc.cdn.civiccomputing.com/8.0/cookieControl-8.0.min.js"></script>
+    <script>
+        var cookieConfig = {
+            apiKey: '7e7b49f71afd012f13a2ce59497f105738692184',
+            product: 'COMMUNITY',
+            statement: {
+              description: 'For more information visit our',
+              name: 'Privacy policy',
+              url: 'https://isitoutyet.info/privacy',
+              updated: '13/06/2018'
+            },
+            optionalCookies: [
+              {
+                name: 'analytics',
+                label: 'Analytics',
+                description: 'We would like to track activity on the site using an analytics service. You can allow us to do this by allowing this option.',
+                initialConsentState: 'on',
+                cookies: [],
+                onAccept: function(){
+                  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+                  ga('create', 'UA-1079849-11', 'auto');
+                  ga('send', 'pageview');
+                },
+                onRevoke: function(){
+                  window['ga-disable-UA-1079849-11'] = true;
+                }
+              },{
+                name: 'personalisation',
+                label: 'Advert Personalisation',
+                description: 'If you select to allow advertising, below, this option will determine whether we personalise the adverts.',
+                initialConsentState: 'on',
+                cookies: [],
+                onAccept: function() {
+                  let adsbygoogle = window.adsbygoogle || [];
+                  adsbygoogle.requestNonPersonalizedAds = 0;
+                  adsbygoogle.pauseAdRequests = 0;                  
+                },
+                onRevoke: function() {
+                  let adsbygoogle = window.adsbygoogle || [];
+                  adsbygoogle.requestNonPersonalizedAds = 1;
+                }
+              },{
+                name: 'advertising',
+                label: 'Advertising',
+                description: 'This option lets us show you advertising. The personalisaiton option, above, allows you to select whether the adverts are personalised.',
+                initialConsentState: 'on',
+                cookies: [],
+                onAccept: function(){
+                  let adsbygoogle = window.adsbygoogle || [];
+                  adsbygoogle.pauseAdRequests = 0;
+                },
+                onRevoke: function(){
+                  let adsbygoogle = window.adsbygoogle || [];
+                  adsbygoogle.pauseAdRequests = 1;
+                }
+              }
+            ],
+
+            position: 'LEFT',
+            theme: 'DARK'
+        };
+        
+        CookieControl.load( cookieConfig );
+    </script>
     <!-- Built with love using PWA Starter Kit -->
     <script type="module" src="src/components/my-app.js" crossorigin></script>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (function() {
+        let adsbygoogle = window.adsbygoogle || []
+        adsbygoogle.pauseAdRequests = 1;
+        adsbygoogle.requestNonPersonalizedAds = 1;
+        adsbygoogle.push({
+          google_ad_client: "ca-pub-8255474170399666",
+          enable_page_level_ads: true
+        });
+      })();
+    </script>
   </body>
 </html>
