--- a/index.html
+++ b/index.html
@@ -173,6 +173,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <!-- Built with love using PWA Starter Kit -->
     <script type="module" src="src/components/my-app.js" crossorigin></script>
 
+    <!-- Firebase App is always required and must be first -->
+    <script src="/__/firebase/5.3.0/firebase-app.js"></script>
+
+    <!-- Add additional services that you want to use -->
+    <!-- <script src="/__/firebase/5.3.0/firebase-auth.js"></script> -->
+    <!-- <script src="/__/firebase/5.3.0/firebase-database.js"></script> -->
+    <script src="/__/firebase/5.3.0/firebase-messaging.js"></script>
+    <!-- <script src="/__/firebase/5.3.0/firebase-functions.js"></script> -->
+
+    <!-- Comment out (or don't include) services that you don't want to use -->
+    <!-- <script src="/__/firebase/5.3.0/firebase-storage.js"></script> -->
+
+    <script src="/__/firebase/init.js"></script>
+
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
       (function() {
