rewrite to use the firebase firestore instead of postgresql

--- a/index.html
+++ b/index.html
@@ -170,8 +170,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         
         CookieControl.load( cookieConfig );
     </script>
-    <!-- Built with love using PWA Starter Kit -->
-    <script type="module" src="src/components/my-app.js" crossorigin></script>
+
+    <!-- Firebase App is always required and must be first -->
+    <!-- <script src="/node_modules/firebase/firebase-app.js"></script> -->
+    <!-- Add additional services that you want to use -->
+    <!-- <script src="/node_modules/firebase/firebase-auth.js"></script> -->
+    <!-- <script src="/node_modules/firebase/firebase-database.js"></script> -->
+    <!-- <script src="/node_modules/firebase/firebase-firestore.js"></script> -->
+    <!-- <script src="/node_modules/firebase/firebase-mesaging.js"></script> -->
+    <!-- <script src="/node_modules/firebase/firebase-functions.js"></script> -->
+
+    <!-- Comment out (or don't include) services that you don't want to use -->
+    <!-- <script src="/node_modules/firebase/firebase-storage.js"></script> -->
+
+
+
 
     <!-- Firebase App is always required and must be first -->
     <script src="/__/firebase/5.3.0/firebase-app.js"></script>
@@ -179,13 +192,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <!-- Add additional services that you want to use -->
     <!-- <script src="/__/firebase/5.3.0/firebase-auth.js"></script> -->
     <!-- <script src="/__/firebase/5.3.0/firebase-database.js"></script> -->
+    <script src="/__/firebase/5.3.0/firebase-firestore.js"></script>
     <script src="/__/firebase/5.3.0/firebase-messaging.js"></script>
     <!-- <script src="/__/firebase/5.3.0/firebase-functions.js"></script> -->
 
     <!-- Comment out (or don't include) services that you don't want to use -->
     <!-- <script src="/__/firebase/5.3.0/firebase-storage.js"></script> -->
 
-    <script src="/__/firebase/init.js"></script>
+    <!-- <script src="/__/firebase/init.js"></script> -->
+    
+    <!-- Built with love using PWA Starter Kit -->
+    <script type="module" src="src/components/my-app.js" crossorigin></script>
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
