--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <!-- <script src="/__/firebase/init.js"></script> -->
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
       (function() {
         let adsbygoogle = window.adsbygoogle || []
@@ -134,7 +134,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       })();
     </script>
 
-    <script src="https://cc.cdn.civiccomputing.com/8.0/cookieControl-8.0.min.js" crossorigin="anonymous"></script>
+    <script src="https://cc.cdn.civiccomputing.com/8.0/cookieControl-8.0.min.js"></script>
     <script>
         var cookieConfig = {
             apiKey: '7e7b49f71afd012f13a2ce59497f105738692184',
