--- a/src/template.html
+++ b/src/template.html
@@ -62,6 +62,11 @@
 	<!-- Sapper creates a <script> tag containing `src/client.js`
 	     and anything else it needs to hydrate the app and
 	     initialise the router -->
-	%sapper.scripts%
+     %sapper.scripts%
+     
+     <script src="https://www.gstatic.com/firebasejs/6.5.0/firebase-app.js"></script>
+     <script src="https://www.gstatic.com/firebasejs/6.5.0/firebase-firestore.js"></script>
+     <script src="https://www.gstatic.com/firebasejs/6.5.0/firebase-messaging.js"></script>
+     
 </body>
 </html>
