--- a/src/template.html
+++ b/src/template.html
@@ -48,7 +48,7 @@
 	     for the current page. CSS for the rest of the app is
 	     lazily loaded when it precaches secondary pages -->
 	%sapper.styles%
-     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/4.2.0/firebaseui.css" />
+     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.5.0/firebase-ui-auth.css" />
 
 	<!-- This contains the contents of the <svelte:head> component, if
 	     the current page has one -->
@@ -59,14 +59,14 @@
 	     because `src/client.js` references it -->
 	<div id='sapper'>%sapper.html%</div>
      
-     <script src="/__/firebase/7.5.2/firebase-app.js"></script>
-     <script src="/__/firebase/7.5.2/firebase-analytics.js"></script>
-     <script src="/__/firebase/7.5.2/firebase-auth.js"></script>
-     <script src="/__/firebase/7.5.2/firebase-firestore.js"></script>
-     <script src="/__/firebase/7.5.2/firebase-messaging.js"></script>
-     <script src="/__/firebase/7.5.2/firebase-performance.js"></script>
-     <script src="/__/firebase/7.5.2/firebase-remote-config.js"></script>
-     <script src="https://cdn.firebase.com/libs/firebaseui/4.3.0/firebaseui.js"></script>
+     <script src="/__/firebase/7.14.1/firebase-app.js"></script>
+     <script src="/__/firebase/7.14.1/firebase-analytics.js"></script>
+     <script src="/__/firebase/7.14.1/firebase-auth.js"></script>
+     <script src="/__/firebase/7.14.1/firebase-firestore.js"></script>
+     <script src="/__/firebase/7.14.1/firebase-messaging.js"></script>
+     <script src="/__/firebase/7.14.1/firebase-performance.js"></script>
+     <script src="/__/firebase/7.14.1/firebase-remote-config.js"></script>
+     <script src="https://www.gstatic.com/firebasejs/ui/4.5.0/firebase-ui-auth.js"></script>
 
 	<!-- Sapper creates a <script> tag containing `src/client.js`
 	     and anything else it needs to hydrate the app and
